backend/k8s/phpfpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-phpfpm-deployment
  labels:
    app: laravel-phpfpm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-phpfpm
  template:
    metadata:
      labels:
        app: laravel-phpfpm
    spec:
      containers:
      - name: laravel-phpfpm
        image: rlewsley99/laravel-k8s
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-phpfpm-service
spec:
  selector:
    app: laravel-phpfpm
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
